# microkit

./: .gitmodules  Cargo.toml  DEVELOPER.md  README.md  avengers_assemble.sh  build_sdk.py  dev_build.py  devicetree.dts  devicetree0.dts  devicetree1.dts  domain_schedule.c  flake.nix  full_run.sh  handle-cross-core-phys-mem.patch  increase_pd_num.patch  make.sh  requirements.txt
.github/: install_march_build_deps.sh  install_ubuntu_deps.sh  repo_checkout.sh  sdk_version.sh
.github/workflows/: deploy.yml  pr.yml  sdk.yaml
capdl_monitor/: Makefile
capdl_monitor/src/: main.c
custom_dts/: overlay-milkv-jupiter.dts
docs/: manual.md
example/arm_smc/: arm_smc.system
example/benchmarks/: Makefile  README.md  benchmark.csv  benchmark.h  benchmark.txt  benchmarks.system  config.h  manager.c  pmu.h  print.c  print.h  process.py  signal_2way_low_to_hi__high.c  signal_2way_low_to_hi__low.c  signal_2way_low_to_hi__mid.c  signal_hi_to_low__high.c  signal_hi_to_low__low.c  signal_hi_to_low_same_core__high.c  signal_hi_to_low_same_core__low.c  signal_low_to_hi_same_core.h  signal_low_to_hi_same_core__high.c  signal_low_to_hi_same_core__low.c
example/cap_sharing/: README.md
example/cross/: Makefile  README.md  cross.c  cross.system
example/double_elf/: Makefile  controller.c  double_elf.c  double_elf.system  secondary.c  stringfile
example/hello/: Makefile  (+3 more)
libmicrokit/: Makefile  microkit_secondary.ld
libmicrokitpnk/: Makefile
loader/: Makefile
monitor/: Makefile  monitor.ld
tool/microkit/: Cargo.toml  rust-toolchain.toml
tool/microkit/src/: argparse.rs  capdl.rs  crc32.rs  elf.rs  kernel_bootinfo.rs  lib.rs  loader.rs  main.rs  pd_symbols.rs  report.rs  sdf.rs  sel4.rs  symbols.rs  uimage.rs  util.rs  viper.rs
tool/microkit/src/capdl/: allocation.rs  builder.rs  capdl.rs  initialiser.rs  iomem.rs  irq.rs  memory.rs  mod.rs  packaging.rs  page_collection.rs  render_elf.rs  reserialise_spec.rs  reserialize_spec.rs  spec.rs  untyped.rs  util.rs
tool/microkit/tests/: test.rs
tool/microkit/tests/sdf/: irq_arm_on_x86.system  irq_ioapic_on_arm.system  irq_msi_on_arm.system  multikernel_cross_core_parenthood.system  multikernel_cross_core_ppc.system  pd_cap_mappings_invalid.system  pd_cap_mappings_overlapping.system  vm_x86_vm_with_child_invalid.system
(+102 files in other folders)
