#
# Copyright 2025, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]
resolver = "3"
members = [
    "tool/microkit",
    "initialiser",
]

[workspace.dependencies.sel4-capdl-initializer]
git = "https://github.com/au-ts/rust-seL4"
rev = "8d91f20cf8d99cba15248cd0a06998a8f7144552"

[workspace.dependencies.sel4-capdl-initializer-types]
git = "https://github.com/au-ts/rust-seL4"
rev = "8d91f20cf8d99cba15248cd0a06998a8f7144552"

[profile.release.package.microkit-tool]
strip = true
