#
# Copyright 2024, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "microkit-tool"
version = "2.0.1-dev"
edition = "2021"
rust-version = "1.73.0"

[[bin]]
name = "microkit"
path = "src/main.rs"

[dependencies]
roxmltree = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sel4-capdl-initializer-types = { path = "../../dep/rust-sel4/crates/sel4-capdl-initializer/types", features = ["alloc", "serde", "deflate"] }

[profile.release]
strip = true
